fix: correctly align walks and so stats

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,7 @@
     --primary-color: #ff3e00;
     --green: #33673B;
     --blue: #337CA0;
+    --accent-color: #eaeaea;
 }
 
 body {
